@startuml workflow_engine_model_special_workflows

class WorkflowBase {
}

class Workflow {
}

class SequenceWorkflow {
}

class ParallelWorkflow {
}

class CombinedWorkflow {
}

class InitWorkflow {
}

class ExitWorkflow {
}

class SingleCommandWorkflow {
}

class SendTriggerWorkflow {
}

class ScaleWorkflow {
}

class IPWorkflow {
}

class AudioControlWorkflow {
}

class LightControlWorkflow {
}

class LabRoomLightControlWorkflow {
}

class ServerRoomLightControlWorkflow {
}

WorkflowBase <|-- Workflow
WorkflowBase <|-- SequenceWorkflow
WorkflowBase <|-- ParallelWorkflow

SequenceWorkflow <|-- CombinedWorkflow

WorkflowBase <|-- SingleCommandWorkflow
SingleCommandWorkflow <|-- SendTriggerWorkflow
SingleCommandWorkflow <|-- AudioControlWorkflow
SingleCommandWorkflow <|-- LightControlWorkflow

Workflow <|-- ScaleWorkflow
Workflow <|-- IPWorkflow

CombinedWorkflow <|-- InitWorkflow
CombinedWorkflow <|-- ExitWorkflow
CombinedWorkflow <|-- LabRoomLightControlWorkflow
CombinedWorkflow <|-- ServerRoomLightControlWorkflow

@enduml